# powerfoo

./: .gitignore  CMakeLists.txt  README.md
.bootstrap/: repositories
.bootstrap/settings/foo/: dispense_headers_path
src/: powerfoo.c  powerfoo.h
